Fix see more on block days on homepage on safari

--- a/wp-content/themes/nsp/scss/components/_home.scss
+++ b/wp-content/themes/nsp/scss/components/_home.scss
@@ -282,10 +282,11 @@
 										display: block;
 										border: none;
 										position: absolute;
-										right: 0;
+										right: 10px;
 										top: 50%;
 										transform: translateY(-50%);
 										width: fit-content;
+										padding: 0;
 
 										p {
 											writing-mode: vertical-lr;
